force-app/main/default/objects/Lead_Snapshot__c/Lead_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Lead Snapshot</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Lead Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>