force-app/main/default/objects/Lead_Snapshot__c/fields/Number_of_SQLs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SQLs__c</fullName>
    <label>Number of SQLs CFY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>