force-app/main/default/objects/Lead_Snapshot__c/fields/Total_Number_of_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Leads__c</fullName>
    <label>Total Number of Leads for CFY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>