force-app/main/default/objects/Lead_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>Total_Number_of_Leads__c</columns>
    <columns>Number_of_MQLs_CFY__c</columns>
    <columns>Number_of_SQLs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>